fix header font-size to ensure that all h1 text will show up on mobile browsers which start with the viewport slightly lower than on the browser emulation.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -208,7 +208,7 @@ img {
         }
 
         h1 {
-            font-size: 1.8em;
+            font-size: 1.5em;
             padding: .6em 1em;
         }
     }
